@@ -1,6 +1,6 @@
 Hello,
 
-This a description what you have to do to integrate Gallery 1.5.2+ into joomla 1.0.2
+This a description what you have to do to integrate Gallery 1.5.2+ into joomla 1.0.2 - 1.0.12
 
 - Install Joomla
 
