@@ -1,6 +1,6 @@
 Hello,
 
-This a description what you have to do to integrate Gallery 1.4.3+ into Mambo 4.5+
+This a description what you have to do to integrate Gallery 1.5.2+ into Mambo 4.5+
 
 - Install Mambo
 
